--- a/src/settings.scss
+++ b/src/settings.scss
@@ -417,8 +417,8 @@ body.ignore-now-playing.mq-playing {
 }
 
 
-.md-scheme-preview {
-	&[scheme-name=dynamic-light], &[scheme-name=dynamic-auto] {
+.md-scheme-item-dynamic .md-scheme-preview {
+	&[scheme-name$=light], &[scheme-name$=auto] {
 		.md-scheme-preview-inner:first-child {
 			--md-accent-color: var(--md-dynamic-light-primary) !important;
 			--md-accent-color-rgb: var(--md-dynamic-light-primary-rgb) !important;
@@ -432,7 +432,7 @@ body.ignore-now-playing.mq-playing {
 			--md-accent-color-grey-base-rgb: 0, 0, 0 !important;
 		}
 	}
-	&[scheme-name=dynamic-dark], &[scheme-name=dynamic-auto] {
+	&[scheme-name$=dark], &[scheme-name$=auto] {
 		.md-scheme-preview-inner:last-child {
 			--md-accent-color: var(--md-dynamic-dark-primary) !important;
 			--md-accent-color-rgb: var(--md-dynamic-dark-primary-rgb) !important;
@@ -446,7 +446,7 @@ body.ignore-now-playing.mq-playing {
 			--md-accent-color-grey-base-rgb: 255, 255, 255 !important;
 		}
 	}
-	&[scheme-name=dynamic-auto] {
+	&[scheme-name$=auto] {
 		.md-scheme-preview-inner:first-child {
 			-webkit-mask-image: linear-gradient(270deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0) 50%, rgba(0,0,0,1) 50%, rgba(0,0,0,1) 100%);
 		}
