Hook context menu & Add icon

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1521,7 +1521,7 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 					-webkit-mask-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' height='20' width='20'%3E%3Cpath d='m8 13.5 5.5-3.5L8 6.5Zm2 4.5q-1.646 0-3.104-.625-1.458-.625-2.552-1.719t-1.719-2.552Q2 11.646 2 10q0-1.667.625-3.115.625-1.447 1.719-2.541Q5.438 3.25 6.896 2.625T10 2q1.667 0 3.115.625 1.447.625 2.541 1.719 1.094 1.094 1.719 2.541Q18 8.333 18 10q0 1.646-.625 3.104-.625 1.458-1.719 2.552t-2.541 1.719Q11.667 18 10 18Zm0-1.5q2.708 0 4.604-1.896T16.5 10q0-2.708-1.896-4.604T10 3.5q-2.708 0-4.604 1.896T3.5 10q0 2.708 1.896 4.604T10 16.5Zm0-6.5Z'/%3E%3C/svg%3E");
 				}
 			}
-			.inf { // 单曲数，专辑数，MV 数 (歌手)
+			.inf { // 单曲数，专辑数，MV 数, 演出数   (歌手)
 				margin-top: 8px;
 				.item {
 					font-size: 0;
@@ -1556,6 +1556,9 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 				}
 				.item:nth-child(3)::before {
 					-webkit-mask-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' height='20' width='20'%3E%3Cpath d='m8 13.5 5.5-3.5L8 6.5ZM3.5 16q-.625 0-1.062-.438Q2 15.125 2 14.5v-9q0-.625.438-1.062Q2.875 4 3.5 4h13q.625 0 1.062.438Q18 4.875 18 5.5v9q0 .625-.438 1.062Q17.125 16 16.5 16Zm0-1.5h13v-9h-13v9Zm0 0v-9 9Z'/%3E%3C/svg%3E");
+				}
+				.item:nth-child(4)::before {
+					-webkit-mask-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' height='20' viewBox='0 96 960 960' width='20'%3E%3Cpath d='M168 864q-29.7 0-50.85-21.5Q96 821 96 792V648q29.7 0 50.85-21.15Q168 605.7 168 576q0-29.7-21.15-50.85Q125.7 504 96 504V360q0-29 21.15-50.5T168 288h624q29.7 0 50.85 21.5Q864 331 864 360v144q-29.7 0-50.85 21.15Q792 546.3 792 576q0 29.7 21.15 50.85Q834.3 648 864 648v144q0 29-21.15 50.5T792 864H168Zm0-72h624v-91q-32-19-52-52t-20-73q0-40 20-73t52-52v-91H168v91q32 19 52 52t20 73q0 40-20 73t-52 52v91Zm311.789-48Q495 744 505.5 733.711q10.5-10.29 10.5-25.5Q516 693 505.711 682.5q-10.29-10.5-25.5-10.5Q465 672 454.5 682.289q-10.5 10.29-10.5 25.5Q444 723 454.289 733.5q10.29 10.5 25.5 10.5Zm0-132Q495 612 505.5 601.711q10.5-10.29 10.5-25.5Q516 561 505.711 550.5q-10.29-10.5-25.5-10.5Q465 540 454.5 550.289q-10.5 10.29-10.5 25.5Q444 591 454.289 601.5q10.29 10.5 25.5 10.5Zm0-132Q495 480 505.5 469.711q10.5-10.29 10.5-25.5Q516 429 505.711 418.5q-10.29-10.5-25.5-10.5Q465 408 454.5 418.289q-10.5 10.29-10.5 25.5Q444 459 454.289 469.5q10.29 10.5 25.5 10.5Zm.211 96Z'/%3E%3C/svg%3E");
 				}
 			}
 			.intr {
